# game_of_life_the_rust_way

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust_workflow.yml
src/: main.rs  pool.rs
