[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3"

[dependencies]
rand = "0.8.5"
#find_folder = "0.3.0"

piston = "0.53.0"
piston_window = "0.128.0"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
